<resources>
    <string name="app_name">Deep Diving</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="exit">Exit</string>
    <string name="keep_playing">KEEP PLAYING</string>
    <string name="quit_the_game_text">Are you sure you want to quit the game?</string>
    <string name="quit">Quit</string>
    <string name="start_game">Start Game</string>

    <string name="signin_failure">Unable to sign in.</string>

    <string name="app_id">976398735189</string>
    <string name="achievements_not_available">In order to see your achievements, you must log in</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="leaderboard_not_available">In order to see leaderboard, you must log in</string>
    <string name="resume">Resume</string>
    <string name="test_number_10">10</string>
    <string name="restart">RESTART</string>
    <string name="game_info">Game Info</string>
    <string name="_2017_the_dept_of_software_engineering">© 2017 - The Dept. of Software Engineering,</string>
    <string name="shenkar_engineering_design_art">Shenkar: Engineering. Design. Art</string>
    <string name="app_name_deep_diving">App Name: Deep Diving</string>
    <string name="version_2_0">Version: 2.0</string>
    <string name="developed_by_yoav_saroya_amp_amit_shmuel"><![CDATA[Developed By Yoav Saroya & Amit Shmuel]]></string>
    <string name="developed_in_the_introduction_to_mobile_computing_course_2017">Developed in the Introduction to Mobile Computing Course, 2017</string>
    <string name="instructors_dr_amnon_dekel_and_amir_uval">Instructors: Dr. Amnon Dekel and Amir Uval</string>
</resources>