<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/sand_pattern"
    android:layout_width="450dp"
    android:layout_height="350dp">

    <TextView
        android:text="@string/test_number_10"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:id="@+id/end_score"
        android:textStyle="normal|bold"
        android:textSize="42sp"
        android:textColor="#F00C0C"
        app:layout_constraintTop_toBottomOf="@+id/game_over_text"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:typeface="normal"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:shadowColor="@android:color/black" />

    <Button
        android:text="@string/restart"
        android:id="@+id/restart_game_button"
        android:fontFamily="casual"
        android:background="@drawable/general_button"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_marginEnd="16dp"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/game_over_text" />

    <Button
        android:text="@string/quit"
        android:id="@+id/back_main_menu_button"
        android:fontFamily="casual"
        android:background="@drawable/general_button"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="@+id/game_over_text" />


    <ImageView
        android:id="@+id/game_over_text"
        android:layout_width="365dp"
        android:layout_height="127dp"
        app:srcCompat="@drawable/game_over"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_over_text"
        app:srcCompat="@drawable/score"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/game_over_text"
        app:layout_constraintHorizontal_bias="0.062" />

    <TextView
        android:text="@string/test_number_10"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:id="@+id/best_score"
        android:textStyle="normal|bold"
        android:textSize="42sp"
        android:textColor="#60F233"
        android:typeface="normal"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:shadowColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintLeft_toRightOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/best_score"
        app:layout_constraintLeft_toLeftOf="@+id/imageView5" />


</android.support.constraint.ConstraintLayout>